# ml_ais

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb
scripts/: get_dataset.sh
