[project]
name = "ml-ais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "ydata-profiling>=4.18.1",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.0",
]
